tests/suite/snapshots/suite__check__tests__check__bad-arg-shadowing.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-arg-shadowing.xi:2:5]
   │
 2 │ bar(foo: int) {}
   ·     ────┬───  
   ·         ╰───── Name already bound in environment
───╯

